# Vito-ISOLDE

./: CMakeLists.txt  ISOLDE.cc  README.md  TrackerHit.hh  VITOMagneticField.cc  action.hh  construction.cc  construction.hh  field2Radial.txt  generator.cc  generator.hh  physicsList.cc  physicsList.hh  sensitiveDetector.cc
include/: VITOMagneticField.hh  actionInitialization.hh  construction.hh  eventAction.hh  generator.hh  physicsList.hh  primaryGeneratorAction.hh  runAction.hh  sensitiveDetector.hh
oldCode/: VITOMagneticField.cc  VITOMagneticField.hh  construction_works.cc  field.cc  field.hh
src/: VITOMagneticField.cc  actionInitialization.cc  construction.cc  eventAction.cc  generator.cc  physicsList.cc  primaryGeneratorAction.cc  runAction.cc  sensitiveDetector.cc
